fix layout bug

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -139,9 +139,8 @@
 }
 
 .loading-next {
-  position: absolute;
   width: 100%;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .pitch-div {
